# pin

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  index.html  pyproject.toml  styles.css  vercel.json
examples/: quickstart.py  uganda_config.yaml
js/: app.js  data.js  utils.js
src/pin/: __init__.py  cli.py  collections.py  config.py  indices.py  load.py  pipeline.py  population.py  search.py  storage.py  timeseries.py
src/pin/web/: __init__.py  app.py  render.py
src/pin/web/static/: app.js  config.js  index.html  style.css
tests/: test_collections_and_pipeline.py  test_config.py  test_indices.py  test_population.py  test_storage.py  test_timeseries.py  test_web.py
