[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pin-planetary"
version = "0.1.0"
description = "Planetary Intelligence Network — vegetation, moisture and thermal analytics over time from Planetary Computer imagery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PIN contributors" }]
keywords = ["remote-sensing", "stac", "planetary-computer", "ndvi", "geospatial", "sentinel-2", "landsat"]

dependencies = [
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "odc-stac>=0.3.9",
    "xarray>=2023.1.0",
    "rioxarray>=0.14",
    "rasterio>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12.0"]
azure = ["adlfs>=2023.1.0", "azure-storage-blob>=12.0"]
s3 = ["s3fs>=2023.1.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-PyYAML",
]

[project.scripts]
pin = "pin.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pin = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # typer uses function calls in argument defaults

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
